<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.neshan.mapsdk.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-50dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnPoorAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivTick"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_gps_null"
            app:tint="@color/colorWhite" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/txt.h00.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/poorـaccuracy"
            android:textColor="@color/colorWhite" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llDistance"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDistance"
                style="@style/txt.h0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                tools:text="فاصله تا میدان انقلاب" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDistanceMeter"
                style="@style/txt.h00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                tools:text="50 متر" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSpeed"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        android:visibility="gone"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnPoorAccuracy"
        app:shapeAppearance="@style/appearance.round.50"
        app:strokeColor="@color/colorRed"
        app:strokeWidth="3dp"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSpeed"
            style="@style/txt.h3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:gravity="center"
            android:padding="4dp" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="@dimen/button_height_45"
        android:layout_height="@dimen/button_height_45"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_gray_light"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_10"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnPoorAccuracy"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/theme"
        android:layout_width="@dimen/button_height_45"
        android:layout_height="@dimen/button_height_45"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gray_light"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_10"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_nights_stay_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/location"
        android:layout_width="@dimen/button_height_45"
        android:layout_height="@dimen/button_height_45"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gray_light"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_10"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/chooseLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_location" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chooseLocation"
        android:layout_width="@dimen/button_height_45"
        android:layout_height="@dimen/button_height_45"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_gray_light"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_10"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigation_24" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/icon_size_35"
        android:layout_height="@dimen/icon_size_35"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!--  login / logout  -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cvSliding"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cvSliding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/appearance.round.15">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTraffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingHorizontal="14dp"
            android:paddingVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            tools:itemCount="10"
            tools:listitem="@layout/item_traffic" />

    </com.google.android.material.card.MaterialCardView>

    <!--  slide button  -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSliding"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/appearance.round.15">

        <RelativeLayout
            android:id="@+id/rlHint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="22dp"
            android:layout_marginVertical="4dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHint"
                style="@style/txt.h0.medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:maxLines="4"
                android:text="@string/receiving_user_location"
                android:visibility="visible" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progressBar"
                style="@style/AVLoadingIndicatorView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/tvHint"
                android:visibility="gone"
                app:indicatorColor="?colorPrimary"
                app:indicatorName="BallScaleMultipleIndicator"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSecondLeft"
                style="@style/txt.h0.medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvHint"
                android:gravity="center"
                android:textColor="?colorPrimary"
                android:visibility="gone"
                tools:text="00:00" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHelper"
                style="@style/txt.h0.medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvHint"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/help"
                android:textColor="?colorPrimary"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include
                android:id="@+id/layoutTimesProgress"
                layout="@layout/layout_times"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <com.arash.neshan.test2.utils.SwipeButton
            android:id="@+id/sbLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:visibility="gone"
            app:background_swipe_color="@drawable/sliding_background_login"
            app:button_bottom_padding="20dp"
            app:button_image_height="90dp"
            app:button_image_width="140dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:drawable_sliding_swipe="@drawable/ic_swipe_login"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_date="1401/12/19"
            app:inner_day="جمعه"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="#000"
            app:inner_text_top_padding="18dp"
            app:inner_time="01:53"
            app:is_rtl="true"
            app:text_sliding="ورود"
            app:text_sliding_swipe="به چپ بکشید" />

        <com.arash.neshan.test2.utils.SwipeButton
            android:id="@+id/sbLogout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:visibility="gone"
            app:background_swipe_color="@drawable/sliding_background_logout"
            app:button_bottom_padding="20dp"
            app:button_image_height="90dp"
            app:button_image_width="140dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:drawable_sliding_swipe="@drawable/ic_swipe_logout"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_date="1401/03/15"
            app:inner_day="یکشنبه"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="#000"
            app:inner_text_top_padding="18dp"
            app:inner_time="01:53"
            app:is_rtl="false"
            app:text_sliding="خروج"
            app:text_sliding_swipe="به راست بکشید" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>